Entregable 9 (productos agregados recientemente)

--- a/ProyectoFinal/src/main/resources/templates/view/public/product/datail.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/product/datail.html
@@ -81,7 +81,7 @@
 							<div class="add add-3">
 								<button class="btn btn-danger my-cart-btn my-cart-b" data-id="1"
 									data-name="Wheat" data-summary="summary 1" data-price="6.00"
-									data-quantity="1" data-image="images/si.jpg">Add to
+									data-quantity="1" th:data-image="@{'/public/images/'+${product.urlimage}}">Add to
 									Cart</button>
 							</div>
 
