--- a/ProyectoFinal/src/main/resources/templates/view/public/layout/header.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/layout/header.html
@@ -97,7 +97,7 @@
 					</nav>
 					 <div class="cart" >
 					
-						<span class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span>
+						<!-- <span class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span> -->
 					</div>
 					<div class="clearfix"></div>
 				</div>
