--- a/ProyectoFinal/src/main/resources/templates/view/public/product/category.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/product/category.html
@@ -122,7 +122,9 @@
 									<button class="btn btn-danger my-cart-btn my-cart-b"
 										data-id="24" data-name="Wheat" data-summary="summary 24"
 										data-price="6.00" data-quantity="1"
-										data-image="images/of24.png">Add to Cart</button>
+										th:data-image="@{'public/images/'+${product.urlimage}}"
+										th:href="@{'/cart/buy'+${product.idproduct}}"
+										>Add to Cart</button>
 								</div>
 							</div>
 						</div>
