--- a/ProyectoFinal/src/main/resources/templates/view/public/home/index.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/home/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<a href="offer.html"><img th:src="@{/public/images/download.png}"
-		class="img-head" alt=""></a>
+	<!-- <a href="offer.html"><img th:src="@{/public/images/download.png}" 
+		class="img-head" alt=""></a>-->
 	<div th:replace="view/public/layout/layout :: header"></div>
 
 	<!--content-->
