--- a/ProyectoFinal/src/main/resources/templates/view/public/layout/header.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/layout/header.html
@@ -1,106 +1,129 @@
 <!-- H E A D E R -->
- <div class="header"> 
+<div class="header">
 
-		<div class="container">
-			
-			<div class="logo">
-				<h1 ><a href="index.html"><b>T<br>H<br>E</b>Big Store<span>The Best Supermarket</span></a></h1>
-			</div>
-			<div class="head-t">
-				<ul class="card">
-					<li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li>
-					<li><a href="login.html" ><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-					<li><a href="register.html" ><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
-					<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-					<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>
-				</ul>	
-			</div>
-			
-			<div class="header-ri">
-				<ul class="social-top">
-					<li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
-				</ul>	
-			</div>
-		
-<!-- N A V B A R -->
-				<div class="nav-top">
-					<nav class="navbar navbar-default">
-					
-					<div class="navbar-header nav_2">
-						<button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						
+	<div class="container">
 
-					</div> 
-					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-						<ul class="nav navbar-nav ">
-							<li th:class="${classActive}"><a th:href="@{/home}" class="hyper "><span>Home</span></a></li>	
-							
-							<!-- G E N E R A R   C A T E G O R I A S   I N I C I O -->
-							<th:block data-th-each="category1 : ${categories}">
-							<li class="dropdown ">
-								<a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span><span th:text="${category1.name}"></span><b class="caret"></b></span></a>
-								<th:block data-th-if="${category1.categories.size()} > 0">
-								<ul class="dropdown-menu multi">
-								
-									<div class="row">
-									<th:block data-th-each="category2 : ${category1.categories}">
-										<div class="col-sm-3">
-											<ul class="multi-column-dropdown">
-												<li>
-													<a th:href="@{'/product/category/' + ${category2.idcategory}}">
-														<span th:text="${category2.name}"></span>
-														<i class="fa fa-angle-right" aria-hidden="true"></i>
-														</a>
-													</li>
-													
-											</ul>
-											<th:block data-th-if="${category2.categories.size()} > 0">
-												<ul>
-													<th:block data-th-each="category3 : ${category2.categories}">
-														<li>
-														<a href="Personal Care.html" th:text=${category3.name}>
-															<i class="fa fa-angle-right" aria-hidden="true"></i>
-														</a>
-														</li>
-													</th:block>
-													
-												</ul>											
-											</th:block>
-																				
-										</div>
-										</th:block>
-										<div class="col-sm-3 w3l">
-											<a href="kitchen.html"><img th:src="@{/public/images/me.png}" class="img-responsive" alt=""></a>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-									
-								</ul>
-	            				</th:block>
-	            										
-							</li>
-						 	</th:block>
-						 	<!-- F I N   G E N E R A R   C A T E G O R I A S   -->
-						 	
-							<li><a href="codes.html" class="hyper"> <span>Codes</span></a></li>
-							<li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li>
-						</ul>
-					</div>
-					</nav>
-					 <div class="cart" >
-					
-						<!-- <span class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span> -->
-					</div>
-					<div class="clearfix"></div>
+		<div class="logo">
+			<h1>
+				<a href="index.html"><b>T<br>H<br>E
+				</b>Big Store<span>The Best Supermarket</span></a>
+			</h1>
+		</div>
+		<div class="head-t">
+			<ul class="card">
+				<li><a href="wishlist.html"><i class="fa fa-heart"
+						aria-hidden="true"></i>Wishlist</a></li>
+				<li><a href="login.html"><i class="fa fa-user"
+						aria-hidden="true"></i>Login</a></li>
+				<li><a href="register.html"><i class="fa fa-arrow-right"
+						aria-hidden="true"></i>Register</a></li>
+				<li><a href="about.html"><i class="fa fa-file-text-o"
+						aria-hidden="true"></i>Order History</a></li>
+				<li><a th:href="@{/cart}"><i class="fa fa-ship"
+						aria-hidden="true"></i>Shipping</a></li>
+			</ul>
+		</div>
+
+		<div class="header-ri">
+			<ul class="social-top">
+				<li><a href="#" class="icon facebook"><i
+						class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
+				<li><a href="#" class="icon twitter"><i
+						class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
+				<li><a href="#" class="icon pinterest"><i
+						class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
+				<li><a href="#" class="icon dribbble"><i
+						class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
+			</ul>
+		</div>
+
+		<!-- N A V B A R -->
+		<div class="nav-top">
+			<nav class="navbar navbar-default">
+
+				<div class="navbar-header nav_2">
+					<button type="button"
+						class="navbar-toggle collapsed navbar-toggle1"
+						data-toggle="collapse" data-target="#bs-megadropdown-tabs">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+
+
 				</div>
-					
-				</div>			
+				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
+					<ul class="nav navbar-nav ">
+						<li th:class="${classActive}"><a th:href="@{/home}"
+							class="hyper "><span>Home</span></a></li>
+
+						<!-- G E N E R A R   C A T E G O R I A S   I N I C I O -->
+						<th:block data-th-each="category1 : ${categories}">
+							<li class="dropdown "><a href="#"
+								class="dropdown-toggle  hyper" data-toggle="dropdown"><span><span
+										th:text="${category1.name}"></span><b class="caret"></b></span></a> <th:block
+									data-th-if="${category1.categories.size()} > 0">
+									<ul class="dropdown-menu multi">
+
+										<div class="row">
+											<th:block data-th-each="category2 : ${category1.categories}">
+												<div class="col-sm-3">
+													<ul class="multi-column-dropdown">
+														<li><a
+															th:href="@{'/product/category/' + ${category2.idcategory}}">
+																<span th:text="${category2.name}"></span> <i
+																class="fa fa-angle-right" aria-hidden="true"></i>
+														</a></li>
+
+													</ul>
+													<th:block data-th-if="${category2.categories.size()} > 0">
+														<ul>
+															<th:block
+																data-th-each="category3 : ${category2.categories}">
+																<li><a href="Personal Care.html"
+																	th:text=${category3.name}> <i
+																		class="fa fa-angle-right" aria-hidden="true"></i>
+																</a></li>
+															</th:block>
+
+														</ul>
+													</th:block>
+
+												</div>
+											</th:block>
+											<div class="col-sm-3 w3l">
+												<a href="kitchen.html"><img
+													th:src="@{/public/images/me.png}" class="img-responsive"
+													alt=""></a>
+											</div>
+											<div class="clearfix"></div>
+										</div>
+
+									</ul>
+								</th:block></li>
+						</th:block>
+						<!-- F I N   G E N E R A R   C A T E G O R I A S   -->
+
+						<li><a href="codes.html" class="hyper"> <span>Codes</span></a></li>
+						<li><a href="contact.html" class="hyper"><span>Contact
+									Us</span></a></li>
+					</ul>
+				</div>
+			</nav>
+			<div class="cart">
+
+				<a th:href="@{/cart}" class="btn btn-danger my-cart-btn my-cart-b"> <i
+					class="fa fa-shopping-cart"></i>
+					 
+					<!-- <span th:text="*{session.cart.size()}?: '(0)'"></span> -->
+					<span th:text="*{session.cart.size()}?: '(0)'"></span>
+					<!-- <span th:text="*{session.cart.size() != null}? *{session.cart.size()} : '(0)'"></span> -->
+					<span class="hidden-sm">items in cart</span>
+				</a>
+
+			</div>
+			<div class="clearfix"></div>
+		</div>
+
+	</div>
 </div>
