--- a/ProyectoFinal/src/main/resources/templates/view/public/product/category.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/product/category.html
@@ -119,12 +119,10 @@
 									<div class="clearfix"></div>
 								</div>
 								<div class="add">
-									<button class="btn btn-danger my-cart-btn my-cart-b"
-										data-id="24" data-name="Wheat" data-summary="summary 24"
-										data-price="6.00" data-quantity="1"
-										th:data-image="@{'public/images/'+${product.urlimage}}"
-										th:href="@{'/cart/buy'+${product.idproduct}}"
-										>Add to Cart</button>
+									<button class="btn btn-danger my-cart-btn my-cart-b">
+	                                        <!-- <a th:href="@{'/product/detail/' + ${product.idproduct}}" class="btn btn-default">View detail</a> -->
+	                                        <a th:href="@{'/cart/buy/' + ${product.idproduct}}">Add to cart</a>
+	                                    </button>
 								</div>
 							</div>
 						</div>
@@ -159,6 +157,7 @@
 	<script th:src="@{/public/js/bootstrap-hover-dropdown.js}"></script>
 	<script th:src="@{/public/js/owl.carousel.min.js}"></script>
 	<script th:src="@{/public/js/front.js}"></script>
+	<script th:src="@{/public/js/jquery.mycart.js}"></script>
 
 
 </body>
