--- a/ProyectoFinal/src/main/resources/templates/view/public/cart/index.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/cart/index.html
@@ -1,10 +1,127 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<div th:replace="view/public/layout/layout :: head"></div>
+
 </head>
+
 <body>
+	<a href="offer.html"><img th:src="@{/public/images/download.png}"
+		class="img-head" alt=""></a>
+	<div th:replace="view/public/layout/layout :: header"></div>
+
+	<!--content-->
+	<div id="content">
+		<div class="container">
+
+			<div class="col-md-12">
+				<ul class="breadcrumb">
+					<li><a href="#">Home</a></li>
+					<li>Shopping cart</li>
+				</ul>
+			</div>
+
+			<div class="col-md-9" id="basket">
+
+				<div class="box">
+
+					<form method="post" action="checkout1.html">
+
+						<h1>Shopping cart</h1><!-- 
+						<p class="text-muted">You currently have 3 item(s) in your
+							cart.</p> -->
+							<br>
+						<div class="table-responsive">
+							<table class="table" id="cart">
+								<!-- <div th:with="s=${0}"> -->
+								<thead>
+									<tr>
+										<th colspan="2">Product</th>
+										<th>Quantity</th>
+										<th>Unit price</th>
+										<th>Discount</th>
+										<th colspan="2">Total</th>
+									</tr>
+								</thead>
+								<tbody>
+									<!-- <input type="hidden" id="total" th:value="${0 }"> -->
+									<th:block th:each="item, i : ${session.cart}">
+										<!-- <div th:with="s=${s + item.product.price * item.quantity}"> -->
+										<!-- <input type="hidden" id="total" th:value="${item.product.price * item.quantity}"> -->
+										<tr>
+											<td><a
+												th:href="@{'/product/datail/' + ${item.product.idproduct}}">
+													<img
+													th:src="@{'/public/images/' + ${item.product.urlimage}}"
+													th:alt="${item.product.name}" width="30" height="30">
+											</a></td>
+											<td><a
+												th:href="@{'/product/datail/' + ${item.product.idproduct}}">
+													<span th:text="${item.product.name}"></span>
+											</a></td>
+											<td><span th:text="${item.quantity}"></span></td>
+											<td>$ <span th:text="${item.product.price}"></span>
+											</td>
+											<td>$0.00</td>
+											<td>$ <span
+												th:text="${item.product.price * item.quantity}"></span>
+											</td>
+											<td><a th:href="@{'/cart/delete/' + ${i.index}}"><i
+													class="fa fa-trash-o"></i></a></td>
+										</tr>
+									</th:block>
+								</tbody>
+								<tfoot>
+									<tr>
+										<th colspan="5">Total</th>
+										<th id="total" colspan="2"></th>
+									</tr>
+								</tfoot>
+							</table>
+						</div>
+						<!-- /.table-responsive -->
+
+						<div class="box-footer">
+							<div class="pull-left">
+								<a href="category.html" class="btn btn-default"><i
+									class="fa fa-chevron-left"></i> Continue shopping</a>
+							</div>
+							<div class="pull-right">
+								<button class="btn btn-default">
+									<i class="fa fa-refresh"></i> Update basket
+								</button>
+								<button type="submit" class="btn btn-primary">
+									Proceed to checkout <i class="fa fa-chevron-right"></i>
+								</button>
+								
+							</div>
+							
+						</div>
+
+					</form>
+					
+
+				</div>
+				<!-- /.box -->
+
+			</div>
+		</div>
+	</div>
+<br>
+	<div th:replace="view/public/layout/layout :: footer"></div>
 
 </body>
+
+<script type="text/javascript">
+	var sum = 0;
+	$("#cart tr").not(':first').not(':last').each(function() {
+		// extrae el subtotal de la tabla
+		var subtotal = $(this).find('td:eq(5)').text();
+		// extrae sólo la parte numérica
+		var num = Number(subtotal.replace(/[^0-9\.]+/g, ""));
+		sum += num;
+	});
+	document.getElementById("total").textContent = '$ ' + sum;
+</script>
 </html>
