--- a/ProyectoFinal/src/main/resources/templates/view/public/cart/index.html
+++ b/ProyectoFinal/src/main/resources/templates/view/public/cart/index.html
@@ -26,7 +26,7 @@
 
 				<div class="box">
 
-					<form method="post" action="checkout1.html">
+					<form method="post" th:action="@{/cart/checkout}">
 
 						<h1>Shopping cart</h1><!-- 
 						<p class="text-muted">You currently have 3 item(s) in your
@@ -93,6 +93,7 @@
 								</button>
 								<button type="submit" class="btn btn-primary">
 									Proceed to checkout <i class="fa fa-chevron-right"></i>
+									
 								</button>
 								
 							</div>
